--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,95 @@
-icewm -- history of user-visible changes.  2020-11-10
+icewm -- history of user-visible changes.  2020-12-14
+
+Release icewm-2.0.0 released 2020-12-14
+---------------------------------------
+
+git shortlog -e -n -w80,6,8 1.9.2...2.0.0
+
+Bert Gijsbers <gijsbers@science.uva.nl> (57):
+      Fix positioning of window list title for non-standard SmallIconSize
+        settings for issue #514.
+      Remove wmmgr.h from wmframe.h. Add classHint() to ClientData.
+      Remove loseFocus().
+      Prefer actionPerformed().
+      Set task title.
+      Add support for Imlib2 as a possible replacement for gdk-pixbuf for issue
+        #513.
+      Improve alpha blending for Imlib2 support for issue #513.
+      Convert last IMLIB to IMLIB2.
+      Prevent unsigned overflow.
+      Add imlib2 to dependencies.
+      Improve rendering quality for MiniIcons for issue #513.
+      Free fAutoScroll when its YWindow is destroyed.
+      Improve alpha thresholding for Imlib2 support for issue #513.
+      Instead of render.h include Xrender.h for dependency checking for issue
+        #516.
+      Report errors if enabled packages are missing for issue #516.
+      Only change a schema key if it exists for issue ice-wm/man#1.
+      Don't resize when trying to move when dragging at y=0 for issue #520.
+      Add errno_string.
+      YLabel and YMsgBox use cstrings.
+      Add layouts for dialogs.
+      Add ylayout.h
+      Better MiniIcons for Imlib2. Support SVG in Imlib2.  Add renderName.
+      Show render engine in About. Use layout classes.
+      Support SVG in Imlib2. Make Imlib2 the default render engine.
+      Add libimlib2-dev dependency.
+      If Imlib2 then disable GdkPixbuf.
+      Fix for showing the icon_pixmap from WM_HINTS, which fixes the icon for
+        NEdit and xmgrace.
+      XGetGeometry returns True.
+      Center MiniIcon.
+      Remove superfluous.
+      Fixes for showing the icon_pixmap from WM_HINTS for timidity and
+        fontforge.
+      Check for destroyed when reparenting.
+      Add more WM_HINTS accessor functions. Check if WM_HINTS update actually
+        changes anything.
+      In unmanage first delete MiniIcon.
+      Add support for WM_HINTS icon_window in MiniIcons.
+      Prevent deprecated warnings for librsvg.
+      Simplify call to nl_langinfo and improve readability.
+      Remove unwanted space and separator in taskbar if toolbar is empty for
+        issue #524.
+      Fix typo for yorigin in composite.
+      Drop const from parameters.
+      Fix for drawing TitleAB and TitleIB pixmaps when they are gradients for
+        issue #523.
+      Don't blend MiniIcon when not in 32-bit mode.
+      Don't unroll on button press for issue #525.
+      Remove support for _WIN_PROTOCOL properties.
+      Update man.
+      Subtract border from icon_window position in MiniIcon.
+      Update 4.1.9 Icons for icon_pixmap and icon_window.
+      Tests for ypointer.h.
+      Use _NET_WM_STATE_HIDDEN instead of IconicState for minimize.
+      Ignore graphics exposures when in scrollWindow.
+      Optimize scrollbars.
+      Fix horizontal scrolling in icehelp.
+      Optimize scrolling images in iceview.
+      Reposition window list if it got offscreen.
+      make update-po
+      Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
+        icewm-1-4-BRANCH
+      Merge branch 'icewm-1-4-BRANCH'
+
+Eduard Bloch <blade@debian.org> (5):
+      Revert "Revert "Stop overpainting clock every second when not needed""
+      [cmake] Print CONFIG_IMLIB2 variable status
+      No attempt to draw Unicode in non-UTF-8 environment
+      Check CONFIG_I18N prior to calling nl_langinfo
+      If-case formating fix
+
+Claudio Cesar de Sá <ccs1664@gmail.com> (1):
+      support BR_Portuguese language in 2 files /lib (#522)
+
 
 Release icewm-1.9.2 released 2020-11-10
 ---------------------------------------
 
 git shortlog -e -n -w80,6,8 1.9.1...1.9.2
 
-Bert Gijsbers <gijsbers@science.uva.nl> (11):
+Bert Gijsbers <gijsbers@science.uva.nl> (12):
       Remove setDND.
       Move DND to subclass YDndWindow.
       Show toolbar button titles.
@@ -18,6 +102,7 @@ Bert Gijsbers <gijsbers@science.uva.nl> (11):
       Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
         icewm-1-4-BRANCH
       Merge branch 'icewm-1-4-BRANCH'
+      Prepare 1.9.2 release
 
 
 Release icewm-1.9.1 released 2020-11-05
@@ -370,245 +455,4 @@ Eduard Bloch <blade@debian.org> (2):
 
 Code7R <Code7R@users.noreply.github.com> (1):
       Feature/smart pointer in file reader (#463)
-
-
-Release icewm-1.8.0 released 2020-08-25
----------------------------------------
-
-git shortlog -e -n -w80,6,8 1.7.0...1.8.0
-
-Bert Gijsbers <gijsbers@science.uva.nl> (123):
-      update to 1.7.0
-      Add definition of ACPIDEV for FreeBSD.
-      Add sys/resource.h for FreeBSD for issue #445.
-      Add begin() + end() to YArrays for C++11 for loops.
-      Check window may have _NET_WM_NAME. Print more of WM_HINTS property.
-      Set WM_ICON_SIZE according to theme icon sizes.
-      Hide titlebar if isIconic and MinimizeToDesktop.
-      handleIdle is virtual
-      Also drag miniicons with left mouse button. Make drawing miniicons more
-        efficient.
-      Place icons considering the workarea.
-      fix space alignment
-      Remove unused variables.
-      Remove 2 obsolete files in theme NanoBlue.
-      Update theme NanoBlue from Nano.Blue-1.4.zip.
-      Only hide title when minimizeToDesktop for issue #446.
-      Simplify using visibleNow.
-      Remove handleCreateWindow.
-      Add changeState. Replace yarray with vector.
-      When restoring from Iconic state then also raise.
-      Support clipping in GraphicsBuffer.
-      Turn clipping for workspace buttons.
-      Handle WM_CHANGE_STATE messages via actionPerformed. Don't set
-        _NET_WM_STATE_FOCUSED when mimimized, hidden or rolledup.
-      Add arrangeIcons to rearrange miniicons. Update icon positions when
-        workarea changes. Don't allow focus timer or autoraise timer to
-        interfere when a frame is minimized, iconified or rolledup.
-      Enable Arrange Icons in taskbar menu to rearrange all desktop miniicons.
-      Don't activate frame when button press on rollup button for issue #446.
-      Don't layout titlebar when minimized to desktop.
-      When iconic restore by toggling minimized.
-      Assume window under mouse is in normal state.
-      Manage title bar local to iconify.
-      Simplify window titles.
-      Fix for correctly computing the X shape mask of shaped titlebars. Fix for
-        updating titlebar shape when title changes. Undo unroll on single click
-        on titlebar.
-      Do less when a frame is unmanaged.
-      Focus miniicons on mouse enter.
-      Don't cache temporary NAtoms.
-      Allow quick repititions of rollup/down for backwards compatibility.
-      Make button hover work after a click-cancel for #448.
-      Use a enumerated type for title buttons supported.
-      Free titlebar when none is needed.
-      Consider ClickToFocus when focussing a MiniIcon
-      Only show a sticky window once on all PagerShowPreview workspace buttons.'
-      Store titlebar buttons in an array. Remove unused MiniIcons when changing
-        workarea dimensions. Repaint a menu button just once. Delete unused
-        titlebar buttons. Fixes for titlebars of tiny windows.
-      Update workspace buttons when workspace names change.
-      Exclude the collapsed taskbar button from workarea calculations.
-      Compute a vertical offset of pixmaps.
-      Compute topSideVerticalOffset as the unoccupied space at the top of frame
-        border pixmaps.
-      Improve efficiency for titlebar buttons.
-      Improve ease of resizing near the top of the frame border. Reduce number
-        of icon computations for _NET_WM_ICON.
-      Undo the translation of English into German in en.po.
-      Update theme CrystalBlue for better positioning for issue #447.
-      Add workspace button pixmaps for theme CrystalBlue.
-      More accurate top side resize handle.
-      Delegate titlebar actions to frame actionPerformed.
-      Use bool in grabEvents and releaseEvents.
-      Remove unused setGrabPointer.
-      More detail in logConfigureRequest.
-      Keep focus untouched if locked or same frame. Return true if restacked in
-        setAbove or setBelow.
-      Handle more detail in configure request messages. Avoid focusing a random
-        client when a request to stack a client below is received for issue
-        #451. Update the _NET_CLIENT_LIST_STACKING when a configure request to
-        restack was received. Remove the hopefully obsolete tcl/tk hack.
-      Update lib/Makefile.am for updated theme CrystalBlue.
-      Check TitleButtonsSupported before creating a new title bar button.
-      Check for null pixmaps to prevent a SIGSEGV for issue #454.
-      Theme directories may have dots.
-      Better indentation for updateLayout
-      Better positioning of collapse button to avoid a white line at the bottom
-        of the taskbar for issue #455.
-      Better relocation of frames when workarea changes.
-      Remove function paintBackground for #457.
-      Update manual for battery patch.
-      Update moveMenu and layerMenu to frame, before they are shown.
-      Add beneath and raiseTo for restacking one window.
-      Task bar can do without expose events.
-      Fix --logevents.
-      Enforce a larger minimum button size for wmdialog.
-      More accurate raising and lowering of frames. Better miniicon positioning.
-      Add test for dragging.
-      More beautiful miniicons show just a large icon for the minimized
-        application.
-      Ensure icons of irregular sizes are always scaled or loaded for issue
-        #459.
-      Simplify positioning of MiniIcons. Fix positioning of MiniIcons on restart
-        for other workspaces. Avoid needlessly repositioning of MiniIcons when
-        the work area shrinks. Fix reinitializing MiniIcon positioning when work
-        area grows. Fix repainting workspace button on taking the focused window
-        to a different workspace. Fix tooltip for MiniIcons when only the window
-        title exists, but not the icon title.
-      Change xterm.icon into xterm.XTerm.icon.
-      Update theme CrystalBlue for issue #447.
-      Add new CrystalBlue files for #447.
-      Remove test for getFocus in setFocus for issues #464 and #462.
-      Support PagerShowPreview for windows with negative positions.
-      add titleAJ.xpm titleAQ.xpm titleIJ.xpm titleIQ.xpm to CrystalBlue theme
-        to avoid artefacts in titlebar corners.
-      Enforce button opacity when using gradients for issue #468.
-      Remove superfluous call to focusLastWindow in wmHide.
-      Avoid creating a titlebar for minimized windows.
-      Update close button for #447.
-      Update all maximize menu entries.
-      Improved ICCCM conformance for restack requests for transient windows for
-        issue #451.
-      New theme option MenuButtonIconVertOffset to adjust the position of the
-        menu button icon in case ShowMenuButtonIcon=1 for issue #466.
-      Fix opacity when using gradients for task buttons.
-      Fix logout menu status.
-      Fix opacity in titlebar when using gradients.
-      Correct opacity for dialogs when using a gradient background for issue
-        #471.
-      Drop unreliable character class in regex.
-      Remove unnecessary call to autoSize when setting title.
-      Give buttons some padding and a minimum size for #467.
-      Button padding and minimum size only applies to YActionButtons for #467.
-      Reuse getMask.
-      Simplify.
-      Add an optional YInputLine to the message box popup for #473.
-      Restore button font for #467.
-      When interating prefer for-loops over while-loops.
-      Permit fullscreen when RaiseOnFocus=1 and focused is not raised. Optimize
-        addTransients to only consider clients which have WM_TRANSIENT_FOR set
-        to the new window.
-      Fix calls to getMask for hidden.
-      In the window list window, improve the Show command to consider work area
-        and screen boundaries. In wmShow only call setState if window state must
-        change. Add new function canShow to test if window is hidden or outside
-        screen boundaries. Make YDesktop a private super class of
-        YWindowManager.
-      Check for transients in canLower.
-      Remove unused setWorkAreaMoveWindows.
-      Mask state in getWinStateHint.
-      Check frame state to guard against unnecessary calls to setState. Only
-        attempt to set a transient above its owner when in same layer. Only
-        wmLower if canLower permits it. Consider affectsWorkArea and
-        topSideVerticalOffset in limitOuterPosition. Improved checks for
-        limitPosition. Remove call to focusLastWindow in setState when
-        minimizing.
-      In setState consider more cases for fullscreen layer update.
-      Don't switch focus on a FocusOut event on the root window, because it is
-        probably stale and carries insufficient information.
-      Don't leak debugging info to the unwary user.
-      Let workspacebutton use the workspace button fonts when drawing text for
-        #467 and #475.
-      Clarify the difference between close and kill.
-      Make update-po.
-      Use only one timer to space mailbox checks apart in time.
-      Rename fMailBoxStatus to fMailBoxControl.
-      Disable copying of Graphics.
-      Add support for backing store when mapped.
-      Much improved drawing quality of MiniIcons.
-      Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
-        icewm-1-4-BRANCH
-      Merge branch 'icewm-1-4-BRANCH'
-      Prepare 1.8.0 release
-
-Eduard Bloch <blade@debian.org> (19):
-      Added basic indexing of source types and purpose
-      Putting resource/system icons into different groups
-      Locating more special icons
-      Make sure not to include duplicated icon paths
-      Don't trigger glib debug assertion in corner cases
-      Support icon themes with alternative structure
-      Extend lookup with the possibility of having the icon folder specified
-        with full path by the user
-      Load size typed icons by a specific order of prefernce
-      Support icons without size spec straight in the path
-      Explicite handling of absolute icon paths without suffix
-      Fix the size preference in one the strategies
-      Consider scalable folder
-      Reverting the use of map and deduplication set
-      Use explicit lookup for scalable icons
-      Fix lookup of all scalable/* categories
-      Improve fallback in YIcon::getScaledIcon
-      Add 128 and 64 folders as last-ressort versions
-      Never try to load icon for names "none" or '-'
-      Space-after-if cosmetics
-
-Aleš Kastner <alkas@volny.cz> (2):
-      Translated using Weblate (Czech)
-      Translated using Weblate (Czech)
-
-Yasuhiko Kamata <belphegor@belbel.or.jp> (2):
-      Translated using Weblate (Japanese)
-      Translated using Weblate (Japanese)
-
-Adolfo Jayme Barrientos <fitoschido@gmail.com> (1):
-      Translated using Weblate (Spanish)
-
-Arif Budiman <arifpedia@gmail.com> (1):
-      Translated using Weblate (Indonesian)
-
-Code7R <Code7R@users.noreply.github.com> (1):
-      [WIP] Discover and remember existing icon paths (#444)
-
-David Medina <medipas@gmail.com> (1):
-      Translated using Weblate (Catalan)
-
-DieSpinne <62444221+DieSpinne@users.noreply.github.com> (1):
-      Rename comments from APM monitor to battery monitor (#456)
-
-Ferdinand Galko <galko.ferdinand@gmail.com> (1):
-      Translated using Weblate (Slovak)
-
-Jens <jens@karatek.net> (1):
-      Translated using Weblate (German)
-
-Jens Maucher <jens.maucher@gmx.de> (1):
-      Translated using Weblate (English)
-
-Luiz Fernando Ranghetti <elchevive68@gmail.com> (1):
-      Translated using Weblate (Portuguese (Brazil))
-
-Sarah Kriesch <ada.lovelace@gmx.de> (1):
-      Translated using Weblate (German)
-
-Stanislav Brabec <sbrabec@suse.cz> (1):
-      Merge remote-tracking branch 'weblate/icewm-1-4-BRANCH' into
-        icewm-1-4-BRANCH
-
-WhiredPlanck <47623588+whriedplanck@users.noreply.github.com> (1):
-      [Translation] Update zh_CN.po (#460)
-
-openSUSE Weblate <weblate-noreply@opensuse.org> (1):
-      Merge branch 'origin/icewm-1-4-BRANCH' into Weblate.
 
