Improve documentation for options for Super/Windows key modifiers.

--- a/man/icewm-preferences.pod
+++ b/man/icewm-preferences.pod
@@ -236,11 +236,16 @@ Delay pointer focusing when mouse moves.
 
 =item B<Win95Keys>=1
 
-Support win95 keyboard keys (Penguin/Meta/Win_L,R shows menu).
+Support the Windows/Super key modifier to activate special functions.
+The left Super key toggles the Start menu, while the right Super key
+toggles the Window list window.
 
-=item B<ModSuperIsCtrlAlt>=1
+=item B<ModSuperIsCtrlAlt>=0
 
-Treat Super/Win modifier as Ctrl+Alt.
+Treat the Super/Win key modifier as a synonym for the Ctrl+Alt modifier
+combination. The default key bindings have many occurrences of Ctrl+Alt.
+If you enable this, then the Super modifier is an alternative way to
+activate them.
 
 =item B<UseMouseWheel>=0
 
